contour de la fiche de perso

--- a/fiche_perso.html
+++ b/fiche_perso.html
@@ -21,6 +21,12 @@
             border-bottom-width: 2px;
             border-bottom-color: gray;
         }
+        .fiche {
+            border-style: solid;
+            border-width: 2px;
+            border-color: black;
+            margin: 0.1cm;
+        }
         .box {
             width: 4cm;
             height: 2.5cm;
