--- a/cartes.html
+++ b/cartes.html
@@ -164,30 +164,6 @@ for (let time = 0; time < 8; time++) {
     cardList.push(pins);
 }
 
-var ecocup = {
-    title: 'Éco cup',
-    line1: 'TYPE: permanant',
-    line2: 'réserve 6 doses',
-    line3: '',
-    line4: '',
-    line5: '',
-};
-for (let time = 0; time < 4; time++) {
-    cardList.push(ecocup);
-}
-
-var pinte = {
-    title: 'Éco cup',
-    line1: 'TYPE: permanant',
-    line2: 'réserve 8 doses',
-    line3: '',
-    line4: '',
-    line5: '',
-};
-for (let time = 0; time < 1; time++) {
-    cardList.push(pinte);
-}
-
 var corne = {
     title: 'Corne',
     line1: 'TYPE: permanant',
@@ -203,13 +179,37 @@ for (let time = 0; time < 1; time++) {
 var crabe = {
     title: 'Crabe',
     line1: 'TYPE: insigne permanant',
-    line2: '',
-    line3: 'MST',
-    line4: '',
+    line2: 'Bonus choppe: -1',
+    line3: '',
+    line4: 'MST',
     line5: '',
 };
 for (let time = 0; time < 6; time++) {
     cardList.push(crabe);
+}
+
+var potager = {
+    title: 'Carrote',
+    line1: 'TYPE: insigne permanant',
+    line2: 'Bonus choppe: 1',
+    line3: '',
+    line4: '',
+    line5: 'Potager',
+};
+for (let time = 0; time < 3; time++) {
+    cardList.push(potager);
+}
+
+var potager = {
+    title: 'Poireau',
+    line1: 'TYPE: insigne permanant',
+    line2: 'Bonus choppe: 1',
+    line3: '',
+    line4: '',
+    line5: 'Potager',
+};
+for (let time = 0; time < 3; time++) {
+    cardList.push(potager);
 }
 
 
@@ -225,7 +225,7 @@ var filieres = [
 ];
 
 var villes = [
-	"Annecy",
+	"Savoie",
 	"Grenoble",
 	"Lyon",
 	"Monpeul",
