--- a/cartes.html
+++ b/cartes.html
@@ -14,6 +14,7 @@
             border-color: black;
             display: inline-block;
             margin: 0.1cm;
+            page-break-inside: avoid;
         }
         th {
             border-bottom-style: solid;
