--- a/cartes.html
+++ b/cartes.html
@@ -221,7 +221,7 @@ for (let time = 0; time < 2; time++) {
 const Anecdote = {
     title: 'Anecdote de congrès',
     line1: 'TYPE: item permanant',
-    line2: '-1 Bonus choppe',
+    line2: '-1 Bonus chope',
     line3: '<i>Tu te rappelles</i>',
     line4: '<i>au dernier congres</i>',
     line5: '<i>Tu as vomis sur ...</i>',
@@ -246,7 +246,7 @@ for (let time = 0; time < 2; time++) {
 const crabe = {
     title: 'Crabe',
     line1: 'TYPE: item permanant',
-    line2: '-1 Bonus choppe',
+    line2: '-1 Bonus chope',
     line3: '',
     line4: 'MST',
     line5: '',
@@ -258,7 +258,7 @@ for (let time = 0; time < 6; time++) {
 const Carrote = {
     title: 'Carrote',
     line1: 'TYPE: item permanant',
-    line2: '+1 Bonus choppe',
+    line2: '+1 Bonus chope',
     line3: '',
     line4: '',
     line5: 'Potager',
@@ -270,7 +270,7 @@ for (let time = 0; time < 3; time++) {
 const Poireau = {
     title: 'Poireau',
     line1: 'TYPE: item permanant',
-    line2: '+1 Bonus choppe',
+    line2: '+1 Bonus chope',
     line3: '',
     line4: '',
     line5: 'Potager',
@@ -285,7 +285,7 @@ const vide = {
     line2: '+_MP opti/max',
     line3: '+_PV',
     line4: '+_@',
-    line5: '+_ choppe / crédib',
+    line5: '+_ chope / crédib',
 };
 for (let time = 0; time < 20; time++) {
     cardList.push(vide);
