--- a/pnj.html
+++ b/pnj.html
@@ -66,9 +66,9 @@ for (let filiereIndex = 0; filiereIndex < filieres.length; filiereIndex++) {
         const pnj = {
             title: filiere + ' ' + ville,
             line1: "TYPE: pnj",
-            line2: "boisson:" + (7 + villeIndex),
-            line3: "boissonOpti:" + (10),
-            line4: "boisson:" + (15),
+            line2: "MP: " + (7 + villeIndex),
+            line3: "MP opti:" + (10),
+            line4: "MP max:" + (15),
             line5: "credibilitruc:" + (7 + filiereIndex),
         };
         cardList.push(pnj);
