ajouter de la carte rois mages

--- a/cartes.html
+++ b/cartes.html
@@ -181,6 +181,30 @@ for (let time = 0; time < 1; time++) {
     cardList.push(corne);
 }
 
+const ptiFoie = {
+    title: 'pti foie',
+    line1: 'TYPE: item permanant',
+    line2: 'sur qui tu veux',
+    line3: '-2MP opti',
+    line4: '-2MP max',
+    line5: '<i>BOOM!</i>',
+};
+for (let time = 0; time < 2; time++) {
+    cardList.push(ptiFoie);
+}
+
+const Anecdote = {
+    title: 'Anecdote de congrès',
+    line1: 'TYPE: item permanant',
+    line2: '-1 Bonus chope',
+    line3: '<i>Tu te rappelles</i>',
+    line4: '<i>au dernier congres</i>',
+    line5: '<i>Tu as vomis sur ...</i>',
+};
+for (let time = 0; time < 2; time++) {
+    cardList.push(Anecdote);
+}
+
 // one shot
 const secBizuth = {
     title: 'Sec bizuth',
@@ -206,28 +230,16 @@ for (let time = 0; time < 2; time++) {
     cardList.push(charette);
 }
 
-const ptiFoie = {
-    title: 'pti foie',
-    line1: 'TYPE: item permanant',
-    line2: 'sur qui tu veux',
-    line3: '-2MP opti',
-    line4: '-2MP max',
-    line5: '<i>BOOM!</i>',
+const roisMages = {
+    title: 'Rois Mages',
+    line1: 'TYPE: one shot',
+    line2: '+3@ à tous les',
+    line3: 'perso présent sur',
+    line4: 'la piste de danse',
+    line5: '<i>🎵 Comme les Rois Mages en Galilée 🎶</i>',
 };
 for (let time = 0; time < 2; time++) {
-    cardList.push(ptiFoie);
-}
-
-const Anecdote = {
-    title: 'Anecdote de congrès',
-    line1: 'TYPE: item permanant',
-    line2: '-1 Bonus chope',
-    line3: '<i>Tu te rappelles</i>',
-    line4: '<i>au dernier congres</i>',
-    line5: '<i>Tu as vomis sur ...</i>',
-};
-for (let time = 0; time < 2; time++) {
-    cardList.push(Anecdote);
+    cardList.push(roisMages);
 }
 
 const blackout = {
@@ -287,7 +299,7 @@ const vide = {
     line4: '+_@',
     line5: '+_ chope / crédib',
 };
-for (let time = 0; time < 20; time++) {
+for (let time = 0; time < 23; time++) {
     cardList.push(vide);
 }
 
