change dé7 description

--- a/fiche_perso_dynamic.html
+++ b/fiche_perso_dynamic.html
@@ -190,7 +190,7 @@
                 let mp = parseInt(gel("mp").value);
                 let mpOpti = parseInt(gel("mpOpti").value);
                 let mpMax = parseInt(gel("mpMax").value);
-                let h = "";
+                let h = "Jauge de MP: ";
                 for (let i = 1; i <= Math.max(mp, mpMax); i++) {
                     let css = '';
                     if (i <= mpOpti) {
