--- a/fiche_perso_dynamic.html
+++ b/fiche_perso_dynamic.html
@@ -84,7 +84,7 @@
                 <td>Dignichose @:  <input type="number" readonly="readonly" value="0" id="dign"></td>
             </tr>
             <tr>
-                <td><div id="bar"></div></td>
+                <td colspan="3"><div id="bar"></div></td>
             </tr>
         </table>
         <table class="fiche" id="CriFort">
@@ -95,7 +95,7 @@
             </thead>
             <tbody>
                 <tr><th>Questions glouglou: <input type="hidden" readonly="readonly" value="0" id="glou">/14</th></tr>
-                <tr><td><label><input type="checkbox" onchange="reclacCriFort()" class="glou" value="1">Avez-vous déjà été ivre ? + 1 points</label></td></tr>
+                <tr><td><label><input type="checkbox" onchange="reclacCriFort()" class="glou" value="1">Avez-vous déjà été ivre ?</label></td></tr>
                 <tr><td><label><input type="checkbox" onchange="reclacCriFort()" class="glou" value="1">Avez-vous déjà fait des concours de secs ? (celui qui bois le plus vite son verre)</label></td></tr>
                 <tr><td><label><input type="checkbox" onchange="reclacCriFort()" class="glou" value="1">Avez-vous déjà participé à des jeux à boire ?</label></td></tr>
                 <tr><td><label><input type="checkbox" onchange="reclacCriFort()" class="glou" value="1">Etes-vous déjà tombé(e) parce que vous étiez trop ivre ?</label></td></tr>
