update from master

--- a/test_du_crie_fort.html
+++ b/test_du_crie_fort.html
@@ -1,7 +1,7 @@
 <h1 id="test-du-crie-fort">Test du crie fort</h1>
 <h2 id="question-glouglou">Question glouglou:</h2>
 <ol type="1">
-<li>Avez-vous déjà été ivre ? + 1 points #</li>
+<li>Avez-vous déjà été ivre ? + 1 points</li>
 <li>Avez-vous déjà fait des concours de secs ? (celui qui bois le plus vite son verre) + 1 points</li>
 <li>Avez-vous déjà participé à des jeux à boire ? + 1 points</li>
 <li>Etes-vous déjà tombé(e) parce que vous étiez trop ivre ? + 1 points</li>
