add welcome pack

--- a/regles.html
+++ b/regles.html
@@ -6,7 +6,7 @@
 <p>Soluche papier se joue avec un dé7:</p>
 <p>Un dé7 c’est un dé à avec les faces numérotées de 0 à 6. Et si tu as pas de dé7, tu utilises un dé6 et si le dé est cassé ou en dehors du plateau ca fait 0.</p>
 <p>Si les calculs donnent des nombres non entiers, il faut les arrondir de gré ou de force à l’arrondi supérieur.</p>
-<h2 id="le-début-de-partie">Le début de partie</h2>
+<h2 id="préparation">Préparation</h2>
 <h3 id="le-plateau-de-jeux">le plateau de jeux</h3>
 <p>Prendre une feuille et faire le plan en A3 du congrès. (au format A3)</p>
 <p>Il aura 4 parties:</p>
@@ -16,14 +16,6 @@
 <li>La salle à manger : pour se rassasier</li>
 <li>La tente : pour être tranquille pour choper ou faire une pls</li>
 </ul>
-<h3 id="préparation">Préparation</h3>
-<p>Choisir le type de partie: - apéro 15 tours: avec 1 repas au tour 8) - soirée 24 tours: avec 2 repas (tous les 10 tours) - congres 42 tours: avec 4 repas (tous les 10 tours)</p>
-<blockquote>
-<p>Note: suivre les tours faits pour savoir quand placer les repas</p>
-</blockquote>
-<p>(sachant que 1 tours correspondrait à peu près à 1/4 d’heure irl)</p>
-<p>Séparer les cartes potager et crabe de la pioche.</p>
-<p>Au début de la partie distribuer des 4 cartes items à chaque joueur.</p>
 <h3 id="création-des-persos">Création des persos</h3>
 <p>Chaque joueur doit passer le test du crie fort. Une fois fini, il doit avoir 2 notes sur 14 en sesque et en boisson.</p>
 <p><a href="test_du_crie_fort.html">le test du crie fort</a></p>
@@ -43,6 +35,17 @@ credibilitruc = 12 / 3 + 4 + 5 = 13</code></pre>
 <p><a href="fiche_perso_dynamic.html">ficher perso avec le calcul</a></p>
 <p><a href="fiche_perso_papier.html">ficher perso papier</a></p>
 <p>Les persos auront aussi 5 variables (valeurs qui changent (beaucoup) tout au long du jeux) - les MP : en rapport avec le glouglou - les MP en attentes - les PV : en rapport avec le bouffe - les points de dignichose (notés @): (celui qui en a le plus gagne) Ils seront notés @ dans le reste règles - les bonus de chope</p>
+<h2 id="le-début-de-partie">Le début de partie</h2>
+<p>Choisir le type de partie: - apéro 15 tours: avec 1 repas au tour 8) - soirée 24 tours: avec 2 repas (tous les 10 tours) - congres 42 tours: avec 4 repas (tous les 10 tours)</p>
+<blockquote>
+<p>Note: suivre les tours faits pour savoir quand placer les repas</p>
+</blockquote>
+<p>(sachant que 1 tours correspondrait à peu près à 1/4 d’heure irl)</p>
+<p>Séparer les cartes potager et crabe de la pioche.</p>
+<h3 id="welcome-pack">Welcome Pack</h3>
+<p>Donner 1 capote et un pin’s à chaque joueurs.</p>
+<p>Distribuer des 2 cartes items à chaque joueur.</p>
+<p>Les perso commencent la partie avec 6PV.</p>
 <h2 id="déroulement-dun-tour-de-table">Déroulement d’un tour de table</h2>
 <p>Les joueurs jouent les uns à la suite des autres dans l’ordre des aiguilles d’une montre si la partie à lieu dans l’hémisphère nord, sinon dans l’autre sens.</p>
 <p>Au début du tour on récupère les cartes PNJ (sauf celles occupées) qu’on remet dans le tas de cartes PNJ, on mélange ce tas. Puis on complete chaque lieu (sauf la tente) pour qu’il y ai 4 perso par lieu (pers joueur + PNJ).</p>
