update number of cards

--- a/cartes.html
+++ b/cartes.html
@@ -100,21 +100,21 @@ let Pins = new Card(
 
 let Corne = new Card(
     'Corne',
-    'permanant',
+    'permanent',
     '+2MP Max',
     'l\'éco cup du viking'
 );
 
 let ptiFoie = new Card(
     'pti foie',
-    'permanant',
+    'permanent',
     'sur qui tu veux<br />-2MP opti<br />-2MP max',
     'BOOM!'
 );
 
 let Anecdote = new Card(
     'Anecdote',
-    'permanant',
+    'permanent',
     '-1 Bonus chope',
     'Tu te rappelles au dernier congres? Tu as vomis sur ...'
 );
@@ -144,7 +144,7 @@ let RoisMages = new Card(
 let blackout = new Card(
     'Blackout',
     'one shot',
-    'Enlève un insigne permanant à toi ou un autre',
+    'Enlève un insigne permanent à toi ou un autre',
     'Rachette tes souvenirs'
 );
 
@@ -193,10 +193,10 @@ let cardGroup= {
         { card: CapotePhospho,  number: 2 },
         { card: PreservatifF,   number: 1 },
         { card: Paillardier,    number: 4 },
-    ],
-    permanant: [
-        { card: Corne,          number: 4 },
         { card: Pins,           number: 4 },
+    ],
+    permanent: [
+        { card: Corne,          number: 4 },
         { card: ptiFoie,        number: 2 },
         { card: Anecdote,       number: 2 },
     ],
