--- a/regles.html
+++ b/regles.html
@@ -34,9 +34,21 @@ dé7 : 5
 credibilitruc = 12 / 3 + 4 + 5 = 13</code></pre>
 <p><a href="fiche_perso_dynamic.html">ficher perso avec le calcul</a></p>
 <p><a href="fiche_perso_papier.html">ficher perso papier</a></p>
-<p>Les persos auront aussi 5 variables (valeurs qui changent (beaucoup) tout au long du jeux) - les MP : en rapport avec le glouglou - les MP en attentes - les PV : en rapport avec le bouffe - les points de dignichose (notés @): (celui qui en a le plus gagne) Ils seront notés @ dans le reste règles - les bonus de chope</p>
+<p>Les persos auront aussi 5 variables (valeurs qui changent (beaucoup) tout au long du jeux)</p>
+<ul>
+<li>les MP : en rapport avec le glouglou</li>
+<li>les MP en attentes</li>
+<li>les PV : en rapport avec le bouffe</li>
+<li>les points de dignichose (notés @): (celui qui en a le plus gagne) Ils seront notés @ dans le reste règles</li>
+<li>les bonus de chope</li>
+</ul>
 <h2 id="le-début-de-partie">Le début de partie</h2>
-<p>Choisir le type de partie: - apéro 15 tours: avec 1 repas au tour 8) - soirée 24 tours: avec 2 repas (tous les 10 tours) - congres 42 tours: avec 4 repas (tous les 10 tours)</p>
+<p>Choisir le type de partie:</p>
+<ul>
+<li>apéro 15 tours: avec 1 repas au tour 8)</li>
+<li>soirée 24 tours: avec 2 repas (tous les 10 tours)</li>
+<li>congres 42 tours: avec 4 repas (tous les 10 tours)</li>
+</ul>
 <blockquote>
 <p>Note: suivre les tours faits pour savoir quand placer les repas</p>
 </blockquote>
@@ -197,7 +209,17 @@ différence de crédibilitruc |6 - 8| = |-2| = 2
 <p>64 = 8 filière x 8 villes</p>
 <h3 id="les-items">les items</h3>
 <h3 id="détails-le-dec-item">Détails : le dec item</h3>
-<p>Le dec items contient : - 16 items valeurs - 16 items objets Un total de 34 cartes (encore un multiple de 7!)</p>
+<p>Le dec items contient :</p>
+<ul>
+<li>8 valeur bouffe</li>
+<li>9 valeur boisson</li>
+<li>13 objets</li>
+<li>8 permanent</li>
+<li>8 one shot</li>
+<li>12 potager (hors de la pioche)</li>
+<li>6 vide (pour des idées)</li>
+</ul>
+<p>Un total de 64 cartes</p>
 <h3 id="les-items-one-shot">Les items one shot</h3>
 <p>Item qu’on applique qu’une fois après il est défaussé.</p>
 <h3 id="les-items-valeurs">Les items valeurs</h3>
